Signed-off-by: skeshari12 <skeshari@msystechnologies.com>
Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

create empty verify pipeline

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

create empty verify pipeline

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

create empty verify pipeline

Signed-off-by: skeshari12 <skeshari@msystechnologies.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -23,6 +23,11 @@ release_branches:
 changelog:
   rollup_header: Changes not yet released to rubygems.org
 
+pipelines:
+  - verify:
+      description: Pull Request validation tests
+      public: true
+
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
   - workload: pull_request_merged:{{github_repo}}:{{release_branch}}:*
